@startuml (id=TimedPenalty)


class AbstractTimedEffect {  /'recommandé par IA Microsoft Copilot'/
}

class PenaltyTest {  /'recommandé par IA Microsoft Copilot'/
}

class TimedPenalty {
    - PenaltyType penaltyType_
    # TimedPenalty(PenaltyType penaltyType)
    # TimedPenalty(const TimedPenalty &) : void
    # TimedPenalty(TimedPenalty &&) : void
    # TimedPenalty &operator=(const TimedPenalty &) : void
    # TimedPenalty &operator=(TimedPenalty &&) : void
    + ~TimedPenalty()
    + {static} makePenalty(PenaltyType bonusType) : TimedPenaltyPtr
    + getPenaltyType() const : PenaltyType
} 

TimedPenalty ..> AbstractTimedEffect : extends  /'recommandé par IA Microsoft Copilot'/
TimedPenalty ..> PenaltyTest : friend  /'recommandé par IA Microsoft Copilot'/

@enduml
